Add missing bcrypt dependency

--- a/capstone/pom.xml
+++ b/capstone/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>json</artifactId>
             <version>20230618</version>
         </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
 
     <build>
