--- a/capstone/pom.xml
+++ b/capstone/pom.xml
@@ -41,10 +41,11 @@
             <version>0.4</version>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.fusesource.jansi/jansi -->
         <dependency>
-            <groupId>at.favre.lib</groupId>
-            <artifactId>bcrypt</artifactId>
-            <version>0.10.2</version>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <version>2.4.0</version>
         </dependency>
     </dependencies>
 
