--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,10 @@
 name: Lint
 
 on:
-  pull_request:
-    types: [opened]
+  push:
+    branches-ignore:
+      - master
+  workflow_dispatch:
 
 concurrency:
   group: lint
